# code-reproducability-yannakakis

./: .gitignore  .gitmodules  README.md  clean.sh  requirements.txt  run_queries.sh  setup.sh
2phase_nsa/: categorize_IR_plans.py  (+2 more)
intermediate_to_df_plan/: Cargo.toml  README.md
intermediate_to_df_plan/src/: lib.rs  to_execution_plan.rs  util.rs
intermediate_to_df_plan/src/intermediate_plan/: mod.rs  yannakakis.rs
intermediate_to_df_plan/src/snapshots/: intermediate_to_df_plan__to_execution_plan__tests__aggr_proj_join.snap  intermediate_to_df_plan__to_execution_plan__tests__filter_qualified.snap  intermediate_to_df_plan__to_execution_plan__tests__filter_unqualified.snap  intermediate_to_df_plan__to_execution_plan__tests__hashjoin.snap  intermediate_to_df_plan__to_execution_plan__tests__hashjoin_selfjoin_with_alias.snap  intermediate_to_df_plan__to_execution_plan__tests__sequential_scan.snap  intermediate_to_df_plan__to_execution_plan__tests__sequential_scan_with_alias.snap  intermediate_to_df_plan__to_execution_plan__tests__sequential_scan_with_alias_and_qualified_filter.snap  intermediate_to_df_plan__to_execution_plan__tests__sequential_scan_with_alias_and_unqualified_filter.snap  intermediate_to_df_plan__to_execution_plan__tests__sequential_scan_with_filter_not_in_projection.snap  intermediate_to_df_plan__to_execution_plan__tests__sequential_scan_with_qualified_filter.snap  intermediate_to_df_plan__to_execution_plan__tests__sequential_scan_with_unqualified_filter.snap  intermediate_to_df_plan__to_execution_plan__tests__yannakakis_join.snap
intermediate_to_df_plan/testdata/: csv_to_parquet.py
intermediate_to_df_plan/testdata/csv/: r.csv
intermediate_to_df_plan/testdata/parquet/: s.parquet
yannakakis-join-implementation/: Cargo.toml  README.md
yannakakis-join-implementation/src/: lib.rs  sel.rs
yannakakis-join-implementation/src/display/: mod.rs
(+49883 files in other folders)
