[package]
name = "intermediate_to_df_plan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.80"
clap = { version = "4.5.8", features = ["derive"] }
csv = "1.3.0"
datafusion = { version = "34.0.0" }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = "1.38.0"
tokio-stream = "0.1.15"
walkdir = "2.5.0"
yannakakis-join-implementation = {path = "../yannakakis-join-implementation/"}

[dev-dependencies]
insta = "1.39.0"
