[package]
name = "yannakakis-join-implementation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.7", features = ["runtime-rng"], default-features = false }
async-recursion = "1.0.5"
clap = { version = "4.5.2", features = ["derive"] }
csv = "1.3.0"
datafusion = { version = "34.0.0" }
# do NOT include feature simd: datafusion no longer has such a feature, and it causes a build error when passed to dependent crates
# datafusion = { version = "34.0.0", features = ["simd"] }
futures = "0.3.30"
half = { version = "2.3.1", default-features = false }
hashbrown = { version = "0.14.3", features = ["raw"] }
parking_lot = "0.12.1"
paste = "1.0.14"
rand = "0.8.5"
snmalloc-rs = "0.3.4"
statistical = "1.0.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.5.1", features = ["cargo_bench_support", "plotters", "rayon", "html_reports", "async", "async_tokio"] }
